syntax = "proto3";

package niodoo.federated;

message FluxTrace {
    double value = 1;
    int64 timestamp_ms = 2;
}

message FluxTraceBatch {
    repeated FluxTrace traces = 1;
    string shard_id = 2;
}

message ShardSignatureRequest {
    repeated string endpoints = 1;
}

message NodeSignatureBlob {
    string shard_id = 1;
    bytes payload = 2;
}

message ShardSignatureResponse {
    repeated NodeSignatureBlob signatures = 1;
}

service ShardTelemetry {
    rpc PullSignatures(ShardSignatureRequest) returns (ShardSignatureResponse);
}

