use crate::tcs_analysis::TopologicalSignature;  // For NodeSig alias
use crate::pipeline::Pipeline;

type NodeSig = TopologicalSignature;
type FluxCoeff = f64;

// Stub protobuf types
#[derive(Debug, Clone)]
struct FluxTrace {
    value: f64,
}

#[derive(Debug, Clone)]
struct FluxTraceBatch {
    traces: Vec<FluxTrace>,
}

#[derive(Debug, Clone)]
struct FluxMetrics {
    fused_flux: f64,
    shard_count: u32,
}

// FederatedResilienceOrchestrator trait for distributed recovery
pub trait FederatedResilienceOrchestrator {
    fn aggregate_topology(&self, shards: &[NodeSig]) -> FluxCoeff;
}

// Impl for Pipeline: Aggregate via mean spectral gap
impl FederatedResilienceOrchestrator for Pipeline {
    fn aggregate_topology(&self, shards: &[NodeSig]) -> FluxCoeff {
        if shards.is_empty() {
            return 1.0;  // Neutral default
        }
        let sum_gaps = shards.iter().map(|sig| sig.spectral_gap).sum::<f64>();
        sum_gaps / shards.len() as f64
    }
}

// NEW: NodalDiagnostics for federated telemetry
#[derive(Debug, Clone)]
pub struct NodalDiagnostics {
    flux_traces: Vec<FluxTrace>,  // Assume FluxTrace protobuf type
}

impl NodalDiagnostics {
    pub fn new() -> Self { Self { flux_traces: Vec::new() } }

    pub fn merge_shard_metrics(&mut self, proto_flux: &[u8], interquartile_gaps: &[f64]) -> FluxMetrics {
        // Stub protobuf deserialization
        let batch = FluxTraceBatch { traces: Vec::new() };
        self.flux_traces.extend(batch.traces);

        // Compute metrics with IQR fusion
        let mean_gap = if interquartile_gaps.is_empty() {
            0.0
        } else {
            interquartile_gaps.iter().sum::<f64>() / interquartile_gaps.len() as f64
        };
        let fused_flux = if self.flux_traces.is_empty() {
            0.0
        } else {
            self.flux_traces.iter().map(|t| t.value * mean_gap).sum::<f64>() / self.flux_traces.len() as f64
        };

        FluxMetrics { fused_flux, shard_count: batch.traces.len() as u32 }
    }
}

// Bind to tests/integration.rs (placeholder emulation)
#[cfg(test)]
mod tests {
    #[tokio::test]
    async fn test_nodal_diagnostics() {
        let mut diagnostics = NodalDiagnostics::new();
        let proto = vec![];  // Mock protobuf
        let gaps = vec![0.1, 0.2, 0.3];
        let metrics = diagnostics.merge_shard_metrics(&proto, &gaps);
        assert!(metrics.fused_flux > 0.28);  // Fidelity assertion
        // Simulate 20 shards
        for _ in 0..20 { diagnostics.merge_shard_metrics(&proto, &gaps); }
    }
}

// Placeholder gRPC stubs (expand as needed)
mod grpc {
    // Stub for shard communication
    pub fn fetch_shard_signatures(_endpoints: &[String]) -> Vec<super::NodeSig> {
        vec![]  // Implement actual gRPC calls
    }
}
// Integrate in pipeline.rs as: let flux = self.aggregate_topology(&shards);
